--- a/app/src/main/res/layout/fragment_item_information.xml
+++ b/app/src/main/res/layout/fragment_item_information.xml
@@ -1,48 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".ItemInformationFragment"
-    android:scrollbars="vertical"
-    android:scrollbarAlwaysDrawVerticalTrack="true"
-    android:fadeScrollbars="false">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:paddingStart="25dp"
+    android:paddingEnd="25dp"
+    tools:context=".ItemInformationFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="800dp">
-
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/item_information"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="No items found."
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#FF000000"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp" />
-        <!-- android:layout_below="@id/title"  -->
-
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_below="@+id/item_information"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/no_image_available" />
-
-        <Button
-            android:id="@+id/btnReturnToSortingGuide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Return To Sorting Guide"
-            android:layout_marginTop="20dp"
-            android:layout_below="@id/item_image"
-            android:layout_centerHorizontal="true"/>
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="@string/item_information"
+            android:textAllCaps="true"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
+        <ImageButton
+            android:id="@+id/closeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/close_button"
+            android:src="@drawable/baseline_close_24" />
 
     </RelativeLayout>
-</ScrollView>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:fadeScrollbars="false">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/item_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="No items found."
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="#FF000000"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp" />
+
+            <ImageView
+                android:id="@+id/item_image"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_below="@+id/item_information"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/no_image_available" />
+
+            <Button
+                android:id="@+id/btnReturnToSortingGuide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Return To Sorting Guide"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/item_image"
+                android:layout_centerHorizontal="true"/>
+
+
+        </RelativeLayout>
+    </ScrollView>
+
+</LinearLayout>
+
