--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -9,7 +9,8 @@
     android:backgroundTint="@color/white"
     android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginEnd="10dp">
+    android:layout_marginEnd="10dp"
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:id="@+id/itemLayout"
