--- a/app/src/main/res/layout/badge_design.xml
+++ b/app/src/main/res/layout/badge_design.xml
@@ -13,7 +13,6 @@
     android:layout_marginTop="10dp">
 
     <LinearLayout
-        android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
@@ -22,17 +21,17 @@
         android:padding="5dp">
 
         <ImageView
-            android:id="@+id/itemImageIV"
+            android:id="@+id/badgeImageIV"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:contentDescription="@string/material"
             android:src="@drawable/badge1" />
 
         <TextView
-            android:id="@+id/itemNameTV"
+            android:id="@+id/badgeTitleTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Badge Title"
+            android:text="@string/badge_title"
             android:textColor="@color/black"
             android:layout_marginTop="5dp"/>
 
