--- a/app/src/main/res/layout/badge_progress_design.xml
+++ b/app/src/main/res/layout/badge_progress_design.xml
@@ -24,11 +24,13 @@
             android:layout_margin="5dp">
 
             <ImageView
+                android:id="@+id/badgeImageIV"
                 android:layout_width="100dp"
                 android:layout_height="80dp"
                 android:src="@drawable/badge1" />
 
             <TextView
+                android:id="@+id/badgeTitleTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
